force-app/main/default/objects/Repair_Request__c/Repair_Request__c.object-meta.xml
<CustomObject>
    <label>Repair Request</label>
    <nameField>
        <label>Repair Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>