force-app/main/default/objects/Repair_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Repair Requests</relationshipLabel>
    <relationshipName>Repair_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>