force-app/main/default/objects/Repair_Request__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <description>Indicates if the status is either &quot;Completed&quot; or &quot;Replaced&quot;.</description>
    <formula>OR(
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    ISPICKVAL(Status__c, &apos;Replaced&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>