force-app/main/default/objects/Repair_Request__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <type>TextArea</type>
</CustomField>