force-app/main/default/objects/Repair_Request__c/fields/Laptop__c.field-meta.xml
<CustomField>
    <fullName>Laptop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laptop</label>
    <referenceTo>Laptop__c</referenceTo>
    <relationshipLabel>Repair Requests</relationshipLabel>
    <relationshipName>Repair_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>