force-app/main/default/objects/Repair_Request__c/fields/Repair_Date__c.field-meta.xml
<CustomField>
    <fullName>Repair_Date__c</fullName>
    <label>Repair Date</label>
    <type>Date</type>
</CustomField>